cmake_minimum_required(VERSION 2.8)
project( BoW_Slic )
find_package( OpenCV REQUIRED )
add_executable( test_bow_slic src/test_bow_slic.cpp src/bow_slic.cpp src/oversegmentation.cpp src/debugging_functions.cpp)
target_compile_features(test_bow_slic PRIVATE cxx_range_for)
target_link_libraries( test_bow_slic ${OpenCV_LIBS} )
